[Bug #20990] Reject escaped multibyte char with control/meta prefix