test/ripper/test_lexer.rb
@@ -355,6 +355,15 @@ world"
     ]
 
     assert_lexer(expected, code)
+
+    code = %["\\C-\\\u{3042}"]
+    expected = [
+      [[1, 0], :on_tstring_beg, '"', state(:EXPR_BEG)],
+      [[1, 1], :on_tstring_content, "\\C-\\\u{3042}", state(:EXPR_BEG)],
+      [[1, 8], :on_tstring_end, '"', state(:EXPR_END)],
+    ]
+
+    assert_lexer(expected, code)
   end
 
   def test_invalid_escape_meta_mbchar
@@ -363,6 +372,15 @@ world"
       [[1, 0], :on_tstring_beg, '"', state(:EXPR_BEG)],
       [[1, 1], :on_tstring_content, "\\M-\u{3042}", state(:EXPR_BEG)],
       [[1, 7], :on_tstring_end, '"', state(:EXPR_END)],
+    ]
+
+    assert_lexer(expected, code)
+
+    code = %["\\M-\\\u{3042}"]
+    expected = [
+      [[1, 0], :on_tstring_beg, '"', state(:EXPR_BEG)],
+      [[1, 1], :on_tstring_content, "\\M-\\\u{3042}", state(:EXPR_BEG)],
+      [[1, 8], :on_tstring_end, '"', state(:EXPR_END)],
     ]
 
     assert_lexer(expected, code)
@@ -377,6 +395,15 @@ world"
     ]
 
     assert_lexer(expected, code)
+
+    code = %["\\M-\\C-\\\u{3042}"]
+    expected = [
+      [[1, 0], :on_tstring_beg, '"', state(:EXPR_BEG)],
+      [[1, 1], :on_tstring_content, "\\M-\\C-\\\u{3042}", state(:EXPR_BEG)],
+      [[1, 11], :on_tstring_end, '"', state(:EXPR_END)],
+    ]
+
+    assert_lexer(expected, code)
   end
 
   def test_invalid_escape_ctrl_meta_mbchar
@@ -385,6 +412,15 @@ world"
       [[1, 0], :on_tstring_beg, '"', state(:EXPR_BEG)],
       [[1, 1], :on_tstring_content, "\\C-\\M-\u{3042}", state(:EXPR_BEG)],
       [[1, 10], :on_tstring_end, '"', state(:EXPR_END)],
+    ]
+
+    assert_lexer(expected, code)
+
+    code = %["\\C-\\M-\\\u{3042}"]
+    expected = [
+      [[1, 0], :on_tstring_beg, '"', state(:EXPR_BEG)],
+      [[1, 1], :on_tstring_content, "\\C-\\M-\\\u{3042}", state(:EXPR_BEG)],
+      [[1, 11], :on_tstring_end, '"', state(:EXPR_END)],
     ]
 
     assert_lexer(expected, code)
